Make more 3 path that fronend can get he portion data including timestamp. And also have 2 path which are the path that can recieve and send tankData.
